--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,9 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
-  database: tourist_spots_production
-  username: tourist_spots
-  password: <%= ENV['TOURIST_SPOTS_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  database: tourist_spot_production
+  username: tourist_spot
+  password: <%= ENV['MESSAGE_BOARD_DATABASE_PASSWORD'] %>
