--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "webpack-dev-server": "^3"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
